k8s/cert-manager/namespace-cert-manager.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "cert-manager"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
